# out/swagger.json
@@ -1307,6 +1307,10 @@
                             "type": "string",
                             "example": "string"
                           },
+                          "admin": {
+                            "type": "string",
+                            "example": "string"
+                          },
                           "createdAt": {
                             "type": "string",
                             "example": "2024-02-15T05:53:06.960Z"
@@ -1396,6 +1400,12 @@
           {
             "name": "vcLink",
             "in": "formData",
+            "type": "string"
+          },
+          {
+            "name": "admin",
+            "in": "formData",
+            "required": true,
             "type": "string"
           }
         ],
@@ -1507,6 +1517,10 @@
                       "type": "string",
                       "example": "string"
                     },
+                    "admin": {
+                      "type": "string",
+                      "example": "string"
+                    },
                     "createdAt": {
                       "type": "string",
                       "example": "2024-02-15T05:53:06.960Z"
@@ -1600,6 +1614,12 @@
             "name": "vcLink",
             "in": "formData",
             "type": "string"
+          },
+          {
+            "name": "admin",
+            "in": "formData",
+            "required": false,
+            "type": "string"
           }
         ],
         "responses": {
@@ -1669,6 +1689,128 @@
         "responses": {
           "default": {
             "description": ""
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      }
+    },
+    "/v1/business/admin/{id}": {
+      "get": {
+        "tags": [
+          "Business"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Endpoint to get all Businesses of a Business admin",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "total": {
+                      "type": "number",
+                      "example": 1
+                    },
+                    "limit": {
+                      "type": "number",
+                      "example": 10
+                    },
+                    "skip": {
+                      "type": "number",
+                      "example": 0
+                    },
+                    "items": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "huid": {
+                            "type": "string",
+                            "example": "string"
+                          },
+                          "_id": {
+                            "type": "string",
+                            "example": "65cd9d8d5cae5ffc348ed638"
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "string"
+                          },
+                          "address": {
+                            "type": "string",
+                            "example": "string"
+                          },
+                          "photos": {
+                            "type": "array",
+                            "example": [
+                              "string"
+                            ],
+                            "items": {
+                              "type": "string"
+                            }
+                          },
+                          "managementType": {
+                            "type": "string",
+                            "example": "string"
+                          },
+                          "contactMobileNumbers": {
+                            "type": "array",
+                            "example": [
+                              "string"
+                            ],
+                            "items": {
+                              "type": "string"
+                            }
+                          },
+                          "contactLandlines": {
+                            "type": "array",
+                            "example": [
+                              "string"
+                            ],
+                            "items": {
+                              "type": "string"
+                            }
+                          },
+                          "admin": {
+                            "type": "string",
+                            "example": "string"
+                          },
+                          "createdAt": {
+                            "type": "string",
+                            "example": "2024-02-15T05:53:06.960Z"
+                          },
+                          "updatedAt": {
+                            "type": "string",
+                            "example": "2024-02-15T05:53:06.960Z"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         },
         "security": [
